--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.5, user-scalable=1, shrink-to-fit=no" name="viewport">
-    <meta name="description" content="Financial data you can trust and afford">
+    <meta name="description" content="Check your Balancer rewards in real-time">
     <link rel="shortcut icon" type="image/png" href="/img/logo-purple.png">
     <title>Limestone</title>
     <!-- Fonts -->
