--- a/public/index.html
+++ b/public/index.html
@@ -10,44 +10,44 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <!-- Start of Async Drift Code -->
-    <script>
-      "use strict";
+    <!--<script>-->
+      <!--"use strict";-->
 
-      !function() {
-        var t = window.driftt = window.drift = window.driftt || [];
-        if (!t.init) {
-          if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
-          t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ],
-            t.factory = function(e) {
-              return function() {
-                var n = Array.prototype.slice.call(arguments);
-                return n.unshift(e), t.push(n), t;
-              };
-            }, t.methods.forEach(function(e) {
-            t[e] = t.factory(e);
-          }), t.load = function(t) {
-            var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
-            o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
-            var i = document.getElementsByTagName("script")[0];
-            i.parentNode.insertBefore(o, i);
-          };
-        }
-      }();
-      drift.SNIPPET_VERSION = '0.3.1';
-      drift.load('3i4cx2ppgdye');
-    </script>
+      <!--!function() {-->
+        <!--var t = window.driftt = window.drift = window.driftt || [];-->
+        <!--if (!t.init) {-->
+          <!--if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));-->
+          <!--t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ],-->
+            <!--t.factory = function(e) {-->
+              <!--return function() {-->
+                <!--var n = Array.prototype.slice.call(arguments);-->
+                <!--return n.unshift(e), t.push(n), t;-->
+              <!--};-->
+            <!--}, t.methods.forEach(function(e) {-->
+            <!--t[e] = t.factory(e);-->
+          <!--}), t.load = function(t) {-->
+            <!--var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");-->
+            <!--o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";-->
+            <!--var i = document.getElementsByTagName("script")[0];-->
+            <!--i.parentNode.insertBefore(o, i);-->
+          <!--};-->
+        <!--}-->
+      <!--}();-->
+      <!--drift.SNIPPET_VERSION = '0.3.1';-->
+      <!--drift.load('3i4cx2ppgdye');-->
+    <!--</script>-->
     <!-- End of Async Drift Code -->
   </head>
   <body>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173900401-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+    <!--<script>-->
+      <!--window.dataLayer = window.dataLayer || [];-->
+      <!--function gtag(){dataLayer.push(arguments);}-->
+      <!--gtag('js', new Date());-->
 
-      gtag('config', 'UA-173900401-1');
-    </script>
+      <!--gtag('config', 'UA-173900401-1');-->
+    <!--</script>-->
     <noscript>
       <strong>We're sorry but vue-argon-design-system doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
