Token staking UI

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Check your Balancer rewards in real-time">
     <link rel="shortcut icon" type="image/png" href="/img/logo-purple.png">
     <title>Limestone</title>
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+
+
     <!-- Start of Async Drift Code -->
     <!--<script>-->
       <!--"use strict";-->
@@ -53,5 +53,14 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+
   </body>
+  <script>
+    setTimeout(function() {
+      document.body.children[6].style.visibility = "hidden";
+    }, 500);
+  </script>
 </html>
